@@ -1,5 +1,18 @@
 # SortVisualizer
 JavaFX application to visualize how insertion and selection sort algorithms work inside.
 
-## Application Screenshots:
+## Preview:
+![demo](https://user-images.githubusercontent.com/31392431/65334596-5b699180-dbcb-11e9-805f-4557fb2f3167.gif)
 
+## Screenshots
+![image](https://user-images.githubusercontent.com/31392431/65334145-82739380-dbca-11e9-9d33-0b9282591a27.png)
+![image](https://user-images.githubusercontent.com/31392431/65334243-b2229b80-dbca-11e9-8cab-5ad8e4a80da2.png)
+
+## Installation
+To use the SortVisualizer program, you will need a copy of the JavaFX library for your platform, which can be found at https://gluonhq.com/products/javafx/.
+
+JavaFX (javafx.controls, javafx.base, javafx.graphics) will need to be added as a dependency in your favorite IDE (IntelliJ, NetBeans, Eclipse etc) or by explicit inclusion in a command to compile. To run from a console after compilation:
+
+```
+java -p "..\path...to...javafx-sdk-11.0.2\lib" --add-modules javafx.controls sortvisualizer.SortVisualizer
+```
